Changes for the Labyrinth-DIUtils-GD

        - change file dates changed to meet W3CDTF standards.
        - added LICENSE file.
        - reworked Makefile.PL for clarity.
        - various META file updates.
        - updated README, added INSTALL file.
        - updated and extended test suite.

5.04    2011-03-13
        - abstracted from Labyrinth, as stand alone plugin.